# books-service

./: .coveragerc  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
accounts/: models.py
accounts/migrations/: 0001_initial.py
api/: v1_urls.py
books/: admin.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_remove_bookrent_user.py  0003_auto_20210410_1231.py  0004_alter_book_category.py
core/: urls.py
core/aws/: conf.py  utils.py
core/settings/: __init__.py  base.py  production.py  staging.py
templates/: base.html
templates/app/: app.html
tests/: conftest.py  test_accounts.py  test_books.py
